labs_solution/lab9/k8s/deployment-app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-info-go
  labels:
    app: devops-info-go
    component: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-info-go
  template:
    metadata:
      labels:
        app: devops-info-go
        component: web
    spec:
      containers:
        - name: devops-info-go
          image: devops-info-go:lab9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
