labs_solution/lab9/k8s/service-app2.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-info-go
  labels:
    app: devops-info-go
spec:
  type: ClusterIP
  selector:
    app: devops-info-go
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
