labs_solution/lab9/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-info-python
  labels:
    app: devops-info-python
spec:
  type: NodePort
  selector:
    app: devops-info-python
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
