labs_solution/lab9/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-lab9-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - local.example.com
      secretName: lab9-tls
  rules:
    - host: local.example.com
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: devops-info-python
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: devops-info-go
                port:
                  number: 80
